--- a/bazaar/templates/userprofile.html
+++ b/bazaar/templates/userprofile.html
@@ -85,7 +85,7 @@
         <div class="well well-md">
             <div class="row" id ="profilebox">
                 <div class="col-sm-6 " id="profileimage">
-                    <img src="../media/ad_pic/22281906_1952773488269281_111137123882776572_n.jpg" alt="" class="img-rounded img-responsive" />
+                    <img src={{media_url}}{{profile.image}}/>
                 </div>
                 <div class="col-sm-6" id="profiledetails">
                     <h4 id="profilename">{{profile.name}}</h4>
