--- a/bazaar/templates/removetagform.html
+++ b/bazaar/templates/removetagform.html
@@ -13,20 +13,19 @@
 {% block head %}
 <title>Home</title>
 <style type="text/css">
-	body{
-		color: black;
-	}
+  body{
+    color: black;
+  }
 </style>
 {% endblock %}  
 
 {% block body %}
 <div style="color: black">
 <p style="color: red"> {{tagstatus}} <br></p>
-<form method="POST" action="{% url 'addtagURL' %}">{% csrf_token %}
-	<table>
-		{% crispy addtagform %}
-	</table>
-
+<form method="POST" action="{% url 'removeTagURL' %}">{% csrf_token %}
+  <table>
+    {% crispy removetagform %}
+  </table>
 
 </form>
 
