--- a/bazaar/templates/signup.html
+++ b/bazaar/templates/signup.html
@@ -1,23 +1,58 @@
+
 <!DOCTYPE html>
 <html lang="en" style="height:100%">
+
+<style type="text/css">
+
+	body {
+		background-color: #3e81cb;
+		color:white;
+	}
+
+	input[type=text], select, textarea {
+	    /*width: 100%;*/
+	    padding: 5px;
+	    border: 1px solid #ccc;
+	    border-radius: 4px;
+	    resize: vertical;
+	}
+
+	label {
+	    padding: 12px 12px 12px 0;
+	    display: inline-block;
+	}
+
+	input[type=submit] {
+	    background-color: #4CAF50;
+	    color: white;
+	    padding: 12px 20px;
+	    border: none;
+	    border-radius: 4px;
+	    cursor: pointer;
+	    margin-bottom: 10px;
+	 }
+
+
+	input[type=submit]:hover {
+	    background-color: #45a049;
+	}
+
+	
+</style>
+
 	<body style="width:100%; height:100%; text-align: center;">
 		<table style="width: 100%; height: 100%; position: absolute; top: 0; bottom: 0; left: 0; right: 0">
 		<tr style="width:100%; height:30%">
-			<td><p style="font-size: 100px;">Campus Bazaar</p></td>
-		</tr>
-
-		<tr style="height: 10%">
-			<td>
-				<p style="font-size: 30px; ">Signup</p>
-			</td>
+			<td><p style="font-size: 30px;">Signup for Campus Bazaar</p></td>
 		</tr>
 
 		<tr>
 			<td style="width: 100%; height: 60%;">
 				<center>
 					<p> {{signupstatus}} <br></p>
-					<form method="POST" enctype="multipart/form-data" action="{% url 'signupURL' %}">{% csrf_token %}
-				    	<table>
+					<form method="POST" enctype="multipart/form-data" action="{% url 'signupURL' %}">
+					{% csrf_token %}
+				    	<table id="table1">
 				    		{{ signupform }}
 						</table>
 						<input type="submit" value="Signup" />
