--- a/bazaar/templates/theme.html
+++ b/bazaar/templates/theme.html
@@ -94,7 +94,7 @@
 
           <ul class="nav navbar-nav navbar-right">
             <li><a href="{% url 'userProfile' %}"><span class="glyphicon glyphicon-eye-open"></span> View Profile </a></li>
-            <li><a href="#"><span class="glyphicon glyphicon-th"></span> Notifications</a></li>
+            <li><a href="{% url 'viewNotificationsURL' %}"><span class="glyphicon glyphicon-th"></span> Notifications</a></li>
             <li><a href="{% url 'adForm' %}"><span class="glyphicon glyphicon-edit"></span> Post Advertisment </a></li>
             <li><a href="{% url 'logoutURL' %}"><span class="glyphicon glyphicon-log-out"></span> Logout </a></li>
           </ul>
