--- a/bazaar/templates/feed.html
+++ b/bazaar/templates/feed.html
@@ -40,9 +40,9 @@
     		display:flex;
     		color: black;
 
-			border: 1px solid #4CAF50;
+			border: 1px solid #428CCC;
 			text-align: center;			
-  			box-shadow: 0px 0px 0px 4px #006B96;
+  			box-shadow: 0px 0px 0px 4px #428CCC;
   			border: 4px solid #fff;
   			border-top-left-radius: 5px;
     		border-bottom-right-radius: 5px;
@@ -119,9 +119,9 @@
 		    color: #064579;
 		}
 		.zoom:hover {
-		    -ms-transform: scale(1.2); /* IE 9 */
-		    -webkit-transform: scale(1.2); /* Safari 3-8 */
-		    transform: scale(1.2); 
+		    -ms-transform: scale(1.1); /* IE 9 */
+		    -webkit-transform: scale(1.1); /* Safari 3-8 */
+		    transform: scale(1.1); 
 		}
 	</style>
 
