--- a/bazaar/templates/notifications.html
+++ b/bazaar/templates/notifications.html
@@ -44,7 +44,7 @@
 	 <!-- UPDATE BID -->
 	{% if update.notify_type == 1%}
 
-	  <form action="{% url 'bidListURL' %}" method="POST">
+	  <form action="{% url 'bidListURL' %}" method="GET">
         <input type="hidden" name="ad" value={{update.link_param.id}} />
         <a href="#" onclick="this.parentNode.submit()">
 		  {% if update.read_status == True%}
@@ -58,20 +58,22 @@
 
 	<!-- ACCEPT BID -->
 	{% elif update.notify_type == 2 %}
+		<form action="{% url 'sellerProfileURL' %}" method="GET">
+        <input type="hidden" name="seller" value={{update.link_param.id}} />
+        <a href="#" onclick="this.parentNode.submit()">
+		  {% if update.read_status == True%}
 
-	  {% if update.read_status == True%}
+		  <p style="font-size: 15px;color:black"> &nbsp {%bootstrap_label update.seller.username %} accepted your bid for the ad {%bootstrap_label update.ad_id.title %}</p>
 
-	  <p style="font-size: 15px;color:black"> &nbsp {%bootstrap_label update.seller.username %} accepted your bid for the ad {%bootstrap_label update.ad_id.title %}</p>
-
-	  {% else %}
-	   <p style="font-size: 15px;color:red"> &nbsp {%bootstrap_label update.seller.username %} accepted your bid for the ad {%bootstrap_label update.ad_id.title %}</p>
+		  {% else %}
+		   <p style="font-size: 15px;color:red"> &nbsp {%bootstrap_label update.seller.username %} accepted your bid for the ad {%bootstrap_label update.ad_id.title %}</p>
 	
-	  {% endif %}
+		  {% endif %}</a></form>
 	  
 	<!-- NEW BID -->
 	{% elif update.notify_type == 3 %}
 	 
-		<form action="{% url 'bidListURL' %}" method="POST">
+		<form action="{% url 'bidListURL' %}" method="GET">
         <input type="hidden" name="ad" value={{update.link_param}} />
         <a href="#" onclick="this.parentNode.submit()">
 		  {% if update.read_status == True%}
