--- a/bazaar/templates/feed.html
+++ b/bazaar/templates/feed.html
@@ -40,12 +40,10 @@
     		display:flex;
     		color: black;
 
-			border: 1px solid #428CCC;
+			border: 0.5px solid #428CCC;
 			text-align: center;			
   			box-shadow: 0px 0px 0px 4px #428CCC;
   			border: 4px solid #fff;
-  			border-top-left-radius: 5px;
-    		border-bottom-right-radius: 5px;
 
 		}
 		#product_image{ 
@@ -103,7 +101,6 @@
 		    background: #eee;
 		    overflow-x: hidden;
 		    padding: 8px 0;
-		    float: left;
 		}
 
 		.sidenav a {
@@ -125,6 +122,30 @@
 		.row {
 		  display: flex; /* equal height of the children */
 		}
+		.ul2 ul {
+		    list-style-type: none;
+		    margin: 0;
+		    padding: 0;
+		    width: 150px;
+		    background-color: #f1f1f1;
+		}
+
+		.ul2 li a {
+		    display: block;
+		    color: #000;
+		    padding: 8px 16px;
+		    text-decoration: none;
+		}
+
+		.ul2li a.active {
+		    background-color: #4CAF50;
+		    color: white;
+		}
+
+		.ul2 li a:hover:not(.active) {
+		    background-color: #555;
+		    color: white;
+		}
 
 	</style>
 
@@ -138,11 +159,16 @@
 
 <div class=row>
 
-<div class="sidenav">
+<div class="ul2">
 
-{% for tag in tags %}
-	  <a href="{% url 'feed' %}?filter={{tag.tag_name}}">{{tag.tag_name}}</a>
-{% endfor %}
+	<ul >
+	  <li>
+	  	{% for tag in tags %}
+		 <a href="{% url 'feed' %}?filter={{tag.tag_name}}">{{tag.tag_name}}</a>
+		{% endfor %}
+	  </li>
+	</ul>
+
 </div>
 
 	
