--- a/bazaar/templates/feed.html
+++ b/bazaar/templates/feed.html
@@ -45,6 +45,10 @@
   			box-shadow: 0px 0px 0px 4px #428CCC;
   			border: 4px solid #fff;
 
+  			border: 1px solid #4C3C1B;
+  			padding: 5px;
+  			background-color: #EEE;
+
 		}
 		#product_image{ 
 			overflow: hidden;
@@ -93,27 +97,6 @@
 		p{
 			font-size: 15px;
 		}
-		.sidenav {
-			margin-top: 10px;
-			margin-right:10px;
-		    width: 130px;
-		    z-index: 1;
-		    background: #eee;
-		    overflow-x: hidden;
-		    padding: 8px 0;
-		}
-
-		.sidenav a {
-		    padding: 6px 8px 6px 16px;
-		    text-decoration: none;
-		    font-size: 15px;
-		    color: #2196F3;
-		    display: block;
-		}
-
-		.sidenav a:hover {
-		    color: #064579;
-		}
 		.zoom:hover {
 		    -ms-transform: scale(1.1); /* IE 9 */
 		    -webkit-transform: scale(1.1); /* Safari 3-8 */
@@ -122,31 +105,45 @@
 		.row {
 		  display: flex; /* equal height of the children */
 		}
+		.ul2{
+			margin-top: 8px;
+		}
 		.ul2 ul {
-		    list-style-type: none;
+			list-style-type: none;
 		    margin: 0;
 		    padding: 0;
 		    width: 150px;
 		    background-color: #f1f1f1;
+		   	border: 1px solid #4C3C1B;
+		   	background: #428CCC;
+		  box-shadow: 0px 0px 0px 4px #006B96;
+		  border: 4px solid #fff;
+		  margin: 0 auto;
+		  border-top-left-radius: 5px;
+		  border-bottom-right-radius: 5px;
 		}
 
 		.ul2 li a {
 		    display: block;
-		    color: #000;
+		    color: white;
 		    padding: 8px 16px;
 		    text-decoration: none;
+		    font-weight: bold;
 		}
 
 		.ul2li a.active {
 		    background-color: #4CAF50;
 		    color: white;
+		   font-weight: bold;
+
 		}
 
 		.ul2 li a:hover:not(.active) {
-		    background-color: #555;
+		    background-color: #0241ff;
 		    color: white;
-		}
+		    font-weight: bold;
 
+		}
 	</style>
 
 {% endblock %}  
