--- a/bazaar/templates/bidlist.html
+++ b/bazaar/templates/bidlist.html
@@ -46,7 +46,7 @@
       padding-top: 12px;
       padding-bottom: 12px;
       text-align: left;
-      background-color: #3e81cb;
+      background-color: #6CA344;
       color: white;
   }
   
