--- a/bazaar/templates/feed.html
+++ b/bazaar/templates/feed.html
@@ -34,17 +34,12 @@
 			margin:10px;
 			background-color: white;
 			overflow: hidden;
-			border-style: solid;
-    		border-width: 2px;
-    		border-color: black;
     		display:flex;
     		color: black;
 
-			border: 0.5px solid #428CCC;
 			text-align: center;			
-  			box-shadow: 0px 0px 0px 4px #428CCC;
-  			border: 4px solid #fff;
 
+  			box-shadow: 0px 0px 0px 0.5px #428CCC;
   			border: 1px solid #4C3C1B;
   			padding: 5px;
   			background-color: #EEE;
@@ -87,7 +82,7 @@
 		  width: 100px;
 		  color:white;
 		  border-radius: 4px;
-		  background: #428cca;
+		  background: #6CA344;
 		  padding: 6px 10px;
 		  border: none;
 		  border-radius: 4px;
@@ -116,12 +111,10 @@
 		    background-color: #f1f1f1;
 		   	border: 1px solid #4C3C1B;
 		   	background: #428CCC;
-		  box-shadow: 0px 0px 0px 4px #006B96;
-		  border: 4px solid #fff;
-		  margin: 0 auto;
-		  border-top-left-radius: 5px;
-		  border-bottom-right-radius: 5px;
-		}
+		    box-shadow: 0px 0px 0px 2px #006B96;
+		    border: 4px solid #fff;
+		    margin: 0 auto;
+		  }
 
 		.ul2 li a {
 		    display: block;
@@ -139,7 +132,7 @@
 		}
 
 		.ul2 li a:hover:not(.active) {
-		    background-color: #0241ff;
+		    background-color: #6CA344;
 		    color: white;
 		    font-weight: bold;
 
