--- a/bazaar/templates/product.html
+++ b/bazaar/templates/product.html
@@ -27,7 +27,7 @@
 		#product button{
 			position: absolute;
 			/*bottom: ;*/
-			background-color:#428bcd;
+			 background: #6CA344;
 			vertical-align: bottom;
 
 		}
@@ -54,9 +54,7 @@
 			background: #3e80cd;
   			box-shadow: 0px 0px 0px 4px #006B96;
   			border: 4px solid #fff;
-  			border-top-left-radius: 5px;
-   		    border-bottom-right-radius: 5px;
- 			width:100%;
+  			width:100%;
  		}
  		p {
  			color:white;
@@ -64,21 +62,17 @@
     		letter-spacing: 1px;
 		}
 		input[type=button], input[type=submit], input[type=reset] {
-		    background-color: #4CAF50;
+		    background-color:  #6CA344;
 		    border: none;
-		    border-top-left-radius: 15px;
-   		    border-bottom-right-radius: 15px;
 		    color: white;
-		    padding: 16px 32px;
+		    padding: 12px 40px;
 		    text-decoration: none;
 		    cursor: pointer;
 		}
 		input[type=button], input[type=submit], input[type=reset]:hover {background-color: #3e8e41}
 
 		input[type=button], input[type=submit], input[type=reset]:active {
-			  background-color: #3e8e41;
-			  box-shadow: 0 5px #666;
-			  transform: translateY(4px);
+			  background-color:  #6CA344;
 		}
 		#table1{
 			margin-left: auto;
