--- a/bazaar/templates/userprofile.html
+++ b/bazaar/templates/userprofile.html
@@ -85,6 +85,7 @@
         padding: 8px;
     }
 
+
     #table1 tr:nth-child(even){background-color: #f2f2f2;}
 
     #table1 tr:hover {background-color: #ddd;}
@@ -93,7 +94,7 @@
         padding-top: 12px;
         padding-bottom: 12px;
         text-align: left;
-        background-color: #3e80cd;
+        background-color: #6CA344;
         color: white;
     }
 
@@ -117,7 +118,7 @@
         padding-top: 12px;
         padding-bottom: 12px;
         text-align: left;
-        background-color: #3e80cd;
+        background-color: #6CA344;
         color: white;
     }
 </style>
